--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,13 @@ p3 {
   font-display: inherit;
 }
 
+a {
+  text-decoration: none;
+  color: #15171a;
+  cursor: pointer;
+  font-size: 20px;
+}
+
 .mb-3 {
   margin-bottom: 1rem;
   margin-top: 30px;
@@ -139,17 +146,19 @@ p3 {
   margin: 0;
   padding-top: 80px;
 }
-.units,
-#fahrenheit-link,
-#celsius-link {
+
+#farenheit,
+#celsius {
   color: #000000;
   font-size: 40px;
+  text-decoration: none;
 }
+
 .footsy {
   text-align: center;
   font-size: 20px;
-  color: #212529;
-  opacity: 55%;
+  color: #15171a;
+  opacity: 95%;
   padding: 12px;
   line-height: 2;
 }
